--- a/nouri/sections/header.liquid
+++ b/nouri/sections/header.liquid
@@ -298,7 +298,7 @@
 
         </div>
 
-        <div class="site-header__section site-header__section--button cart-icon">
+        <div class="site-header__section--button cart-icon">
           <a href="{{ routes.cart_url }}"
             class="btn btn--clear btn--square btn--hover-scale site-header__cart ajax-cart__toggle" aria-expanded="false">
             {%- assign icon = 'icon-header-' | append: section.settings.icon %}
