--- a/nouri/sections/product-template.liquid
+++ b/nouri/sections/product-template.liquid
@@ -332,7 +332,7 @@
     {
         "type": "checkbox",
         "id": "show_modal",
-        "label": "Show modal on click?",
+        "label": "Show icon modal on click?",
         "default": true
     },
     {
@@ -341,32 +341,32 @@
     },
     {
         "type":"paragraph",
-        "content": "[Edit Icon 01](https://nouri-wellness.myshopify.com/admin/bulk?resource_name=Product&app_context=&edit=metafields.global.icon_01%2Cmetafields.global.icon_01_title%2Cmetafields.global.icon_01_text%2Cmetafields.global.icon_01_conditions%3Astring&show=&return_to=%2Fadmin%2Fproducts&metafield_titles=&metafield_options=&query=&published_status=online_store%3Avisible&order=title+asc)"
+        "content": "[Add Icon 01 image URL](https://nouri-wellness.myshopify.com/admin/bulk?resource_name=Product&app_context=&edit=metafields.global.icon_01%2Cmetafields.global.icon_01_title%2Cmetafields.global.icon_01_text%2Cmetafields.global.icon_01_conditions%3Astring&show=&return_to=%2Fadmin%2Fproducts&metafield_titles=&metafield_options=&query=&published_status=online_store%3Avisible&order=title+asc)"
     },
     {
         "type":"paragraph",
-        "content": "[Edit Icon 02](https://nouri-wellness.myshopify.com/admin/bulk?resource_name=Product&app_context=&edit=metafields.global.icon_02%2Cmetafields.global.icon_02_title%2Cmetafields.global.icon_02_text%2Cmetafields.global.icon_02_conditions%3Astring&show=&return_to=%2Fadmin%2Fproducts&metafield_titles=&metafield_options=&query=&published_status=online_store%3Avisible&order=title+asc)"
+        "content": "[Add Icon 02 image URL](https://nouri-wellness.myshopify.com/admin/bulk?resource_name=Product&app_context=&edit=metafields.global.icon_02%2Cmetafields.global.icon_02_title%2Cmetafields.global.icon_02_text%2Cmetafields.global.icon_02_conditions%3Astring&show=&return_to=%2Fadmin%2Fproducts&metafield_titles=&metafield_options=&query=&published_status=online_store%3Avisible&order=title+asc)"
     },
     {
         "type":"paragraph",
-        "content": "[Edit Icon 03](https://nouri-wellness.myshopify.com/admin/bulk?resource_name=Product&app_context=&edit=metafields.global.icon_03%2Cmetafields.global.icon_03_title%2Cmetafields.global.icon_03_text%2Cmetafields.global.icon_03_conditions%3Astring&show=&return_to=%2Fadmin%2Fproducts&metafield_titles=&metafield_options=&query=&published_status=online_store%3Avisible&order=title+asc)"
+        "content": "[Add Icon 03 image URL](https://nouri-wellness.myshopify.com/admin/bulk?resource_name=Product&app_context=&edit=metafields.global.icon_03%2Cmetafields.global.icon_03_title%2Cmetafields.global.icon_03_text%2Cmetafields.global.icon_03_conditions%3Astring&show=&return_to=%2Fadmin%2Fproducts&metafield_titles=&metafield_options=&query=&published_status=online_store%3Avisible&order=title+asc)"
     },
     {
         "type":"paragraph",
-        "content": "[Edit Icon 04](https://nouri-wellness.myshopify.com/admin/bulk?resource_name=Product&app_context=&edit=metafields.global.icon_04%2Cmetafields.global.icon_04_title%2Cmetafields.global.icon_04_text%2Cmetafields.global.icon_04_conditions%3Astring&show=&return_to=%2Fadmin%2Fproducts&metafield_titles=&metafield_options=&query=&published_status=online_store%3Avisible&order=title+asc)"
+        "content": "[Add Icon 04 image URL](https://nouri-wellness.myshopify.com/admin/bulk?resource_name=Product&app_context=&edit=metafields.global.icon_04%2Cmetafields.global.icon_04_title%2Cmetafields.global.icon_04_text%2Cmetafields.global.icon_04_conditions%3Astring&show=&return_to=%2Fadmin%2Fproducts&metafield_titles=&metafield_options=&query=&published_status=online_store%3Avisible&order=title+asc)"
     },
     {
         "type":"paragraph",
-        "content": "[Edit Icon 05](https://nouri-wellness.myshopify.com/admin/bulk?resource_name=Product&app_context=&edit=metafields.global.icon_05%2Cmetafields.global.icon_05_title%2Cmetafields.global.icon_05_text%2Cmetafields.global.icon_05_conditions%3Astring&show=&return_to=%2Fadmin%2Fproducts&metafield_titles=&metafield_options=&query=&published_status=online_store%3Avisible&order=title+asc)"
+        "content": "[Add Icon 05 image URL](https://nouri-wellness.myshopify.com/admin/bulk?resource_name=Product&app_context=&edit=metafields.global.icon_05%2Cmetafields.global.icon_05_title%2Cmetafields.global.icon_05_text%2Cmetafields.global.icon_05_conditions%3Astring&show=&return_to=%2Fadmin%2Fproducts&metafield_titles=&metafield_options=&query=&published_status=online_store%3Avisible&order=title+asc)"
     },
     {
         "type":"paragraph",
-        "content": "[Edit Icon 06](https://nouri-wellness.myshopify.com/admin/bulk?resource_name=Product&app_context=&edit=metafields.global.icon_06%2Cmetafields.global.icon_06_title%2Cmetafields.global.icon_06_text%2Cmetafields.global.icon_06_conditions%3Astring&show=&return_to=%2Fadmin%2Fproducts&metafield_titles=&metafield_options=&query=&published_status=online_store%3Avisible&order=title+asc)"
+        "content": "[Add Icon 06 image URL](https://nouri-wellness.myshopify.com/admin/bulk?resource_name=Product&app_context=&edit=metafields.global.icon_06%2Cmetafields.global.icon_06_title%2Cmetafields.global.icon_06_text%2Cmetafields.global.icon_06_conditions%3Astring&show=&return_to=%2Fadmin%2Fproducts&metafield_titles=&metafield_options=&query=&published_status=online_store%3Avisible&order=title+asc)"
     },
     {
       "type": "color",
       "id": "icon_text",
-      "label": "Text Color",
+      "label": "Icons text Color",
       "default": "#3D6252"
     },
     {
@@ -375,10 +375,36 @@
       "label": "Icons close together?",
       "default": true
   },
+  {
+        "type": "checkbox",
+        "id": "top_line",
+        "label": "Icons top line",
+        "default": true
+    },
+    {
+      "type": "select",
+      "id": "icon_size",
+      "label": "Icon Size",
+      "default": "medium",
+      "options": [
+        {
+          "value": "large",
+          "label": "Large"
+        },
+        {
+          "value": "medium",
+          "label": "Medium"
+        },
+        {
+          "value": "small",
+          "label": "Small"
+        }
+      ]
+  },
     {
       "type": "select",
       "id": "icon_top_margin",
-      "label": "Top margin",
+      "label": "Icons top margin",
       "default": "medium",
       "options": [
         {
@@ -403,64 +429,38 @@
         }
       ]
   },
-  {
-        "type": "checkbox",
-        "id": "top_line",
-        "label": {
-          "de": "Unterer Rand",
-          "en": "Top line",
-          "es": "Margen inferior",
-          "fr": "Marge inférieure",
-          "it": "Margine inferiore",
-          "ja": "下マージン",
-          "nl": "Ondermarge",
-          "pt-BR": "Margem inferior",
-          "zh-CN": "下边距",
-          "zh-TW": "下方邊界"
-        },
-        "default": true
-    },
-  {
-        "type": "checkbox",
-        "id": "bottom_margin",
-        "label": {
-          "de": "Unterer Rand",
-          "en": "Bottom margin",
-          "es": "Margen inferior",
-          "fr": "Marge inférieure",
-          "it": "Margine inferiore",
-          "ja": "下マージン",
-          "nl": "Ondermarge",
-          "pt-BR": "Margem inferior",
-          "zh-CN": "下边距",
-          "zh-TW": "下方邊界"
-        },
-        "default": true
-    },
     {
-      "type": "select",
-      "id": "icon_size",
-      "label": "Icon Size",
-      "default": "medium",
-      "options": [
-        {
-          "value": "large",
-          "label": "Large"
-        },
-        {
-          "value": "medium",
-          "label": "Medium"
-        },
-        {
-          "value": "small",
-          "label": "Small"
-        }
-      ]
-  },
+        "type": "select",
+        "id": "icon_bottom_margin",
+        "label": "Icons bottom margin",
+        "default": "medium",
+        "options": [
+            {
+                "value": "xlarge",
+                "label": "XLarge"
+            },
+            {
+            "value": "large",
+            "label": "Large"
+            },
+            {
+            "value": "medium",
+            "label": "Medium"
+            },
+            {
+            "value": "small",
+            "label": "Small"
+            },
+            {
+            "value": "none",
+            "label": "None"
+            }
+        ]
+    },
         {
             "type": "text",
             "id": "cta_text_heading",
-            "label": "CTA text",
+            "label": "Icons CTA text",
             "default": "click the icons to learn more"
         },
 {
@@ -470,6 +470,10 @@
     {
         "type":"paragraph",
         "content": "[Add Carousel Images](https://nouri-wellness.myshopify.com/admin/bulk?resource_name=Product&app_context=&edit=metafields.global.carousel_image_urls%3Astring&show=&return_to=%2Fadmin%2Fproducts&metafield_titles=&metafield_options=&query=&published_status=online_store%3Avisible&order=title+asc)"
+    },
+    {
+        "type":"paragraph",
+        "content": "[Add Mobile Carousel Images](https://nouri-wellness.myshopify.com/admin/bulk?resource_name=Product&app_context=&edit=metafields.global.carousel_mobile_image_urls%3Astring&show=&return_to=%2Fadmin%2Fproducts&metafield_titles=&metafield_options=&query=&published_status=online_store%3Avisible&order=title+asc)"
     },
     {
         "type": "paragraph",
